--- a/epilog.tex
+++ b/epilog.tex
@@ -1,2 +1,9 @@
 \chapter*{Conclusion}
 \addcontentsline{toc}{chapter}{Conclusion}
+
+In this thesis, we described and proved notions and relations which were needed to fully understand the pole shifting theorem. We started with the definition of continuous linear autonomous systems. We showed that the system is stable if the eigenvalues of its fundamental matrix have negative real parts.
+Next, we derived the rank condition for controllability using discrete-time systems and the Cayley-Hamilton theorem. After that, we proved that this condition also holds for continuous-time systems. Then, we proved that the characteristic polynomial of the fundamental matrix of the system splits uniquely into its controllable and uncontrollable parts. 
+
+Subsequently, we formulated and proved the pole-shifting theorem. The theorem states that given a monic polynomial of degree equal to the rank of the reachability matrix, we can always find such a feedback matrix that the characteristic polynomial of the resulting fundamental matrix is equal to the given polynomial times the uncontrollable part.
+
+One of the corollaries is that if we work with controllable system, we can, using the pole-shifting theorem, find such a feedback matrix that the system is stable. 
