--- a/title.tex
+++ b/title.tex
@@ -115,6 +115,32 @@ Keywords:
 
 \vss}
 
+\vbox {
+\begin{otherlanguage}{slovak}
+\setlength\parindent{0mm}
+\setlength\parskip{5mm}
+
+Názov práce:
+\ThesisTitleSk
+
+Autor:
+\ThesisAuthor
+
+\DeptTypeSk:
+\DepartmentSk
+
+Vedúci bakalárskej práce:
+\Supervisor, \SupervisorsDepartmentSk
+
+Abstrakt:
+\AbstractSk
+
+Kľúčové slová:
+\KeywordsSk
+
+\end{otherlanguage}
+\vss}
+
 \newpage
 
 \openright
